syntax = "proto3";

package com.example.pharmacygrpc;
option csharp_namespace = "IntegrationAdapters.Protos";

message MessageProto {
  string message = 1;
  int64 randomInteger = 2;
}

message MessageResponseProto {
  string response = 1;
  string status = 2;
}
