syntax = "proto3";

package com.example.pharmacygrpc;
option csharp_namespace = "IntegrationAdapters.Protos";
import "Protos/model.proto";

service SpringGrpcService {
  rpc communicate (MessageProto) returns (MessageResponseProto);
}
